force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Deceased_Month__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deceased_Month__c</fullName>
    <label>Deceased Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Month</valueSetName>
    </valueSet>
</CustomField>