force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Deceased_Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deceased_Source__c</fullName>
    <label>Deceased Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SS</fullName>
                <label>Social Security Death Index</label>
            </value>
            <value>
                <fullName>AF</fullName>
                <label>Alumni Finder</label>
            </value>
            <value>
                <fullName>DF</fullName>
                <label>Deceased Unconfirmed Final</label>
            </value>
            <value>
                <fullName>DM</fullName>
                <label>Direct Mail Piece from Family</label>
            </value>
            <value>
                <fullName>LF</fullName>
                <label>Letter from Family</label>
            </value>
            <value>
                <fullName>LO</fullName>
                <label>Letter from other than Family</label>
            </value>
            <value>
                <fullName>MM</fullName>
                <label>Memorial Gift</label>
            </value>
            <value>
                <fullName>MN</fullName>
                <label>Memorial Notification</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>Newspaper</label>
            </value>
            <value>
                <fullName>OB</fullName>
                <label>Obituary Death Index</label>
            </value>
            <value>
                <fullName>PF</fullName>
                <label>Phone Call from Family</label>
            </value>
            <value>
                <fullName>PO</fullName>
                <label>Phone Call from Other than Family</label>
            </value>
            <value>
                <fullName>PH</fullName>
                <label>Phone Center</label>
            </value>
            <value>
                <fullName>RD</fullName>
                <label>Regional Director</label>
            </value>
            <value>
                <fullName>WE</fullName>
                <label>Web</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>