force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Deceased_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deceased_Year__c</fullName>
    <label>Deceased Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Year</valueSetName>
    </valueSet>
</CustomField>