force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Degree_Count_School_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Count_School_Roll_Up__c</fullName>
    <description>Number of school degrees. Used by VSE reports.</description>
    <label>Degree Count (School)</label>
    <summaryFilterItems>
        <field>ucinn_ascendv2__Degree_Information__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>School Degree Information</value>
    </summaryFilterItems>
    <summaryForeignKey>ucinn_ascendv2__Degree_Information__c.ucinn_ascendv2__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>