force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Degree_Year_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Year_Roll_Up__c</fullName>
    <label>Degree Year</label>
    <summarizedField>ucinn_ascendv2__Degree_Information__c.ucinn_ascendv2__Degree_Year_Number_Formula__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Degree_Information__c.ucinn_ascendv2__Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>