force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Designation_of_Largest_Gift_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_of_Largest_Gift_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation of Largest Gift</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Constituents (Designation of Largest Gift)</relationshipLabel>
    <relationshipName>Contacts_Designation_of_Largest_Gift</relationshipName>
    <type>Lookup</type>
</CustomField>