force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Designation_of_Largest_PP_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_of_Largest_PP_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation of Largest Pledge Payment</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Constituents (Designation of Largest Pledge Payment LU)</relationshipLabel>
    <relationshipName>Contacts_Designation_of_Largest_PP</relationshipName>
    <type>Lookup</type>
</CustomField>