force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Do_Not_Automatically_Update__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Do_Not_Automatically_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent household seasonal address to overwrite household member&apos;s preferred address.</description>
    <inlineHelpText>Prevent household seasonal address to overwrite household member&apos;s preferred address.</inlineHelpText>
    <label>Do Not Automatically Update</label>
    <type>Checkbox</type>
</CustomField>