force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>