force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Do_Receive_Action_Center_Notification__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Do_Receive_Action_Center_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Receive Action Center Notification</label>
    <type>Checkbox</type>
</CustomField>