force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Do_Receive_Household_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Do_Receive_Household_Soft_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Receive Household Soft Credit</label>
    <type>Checkbox</type>
</CustomField>