force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BBB</fullName>
                <label>Black/African American</label>
            </value>
            <value>
                <fullName>OOO</fullName>
                <label>Asian</label>
            </value>
            <value>
                <fullName>SSS</fullName>
                <label>Hispanic/Latino</label>
            </value>
            <value>
                <fullName>CCC</fullName>
                <label>White</label>
            </value>
            <value>
                <fullName>PPP</fullName>
                <label>Native Hawaiian/Other Pacific Islander</label>
            </value>
            <value>
                <fullName>AAA</fullName>
                <label>American Indian/Alaska Native</label>
            </value>
            <value>
                <fullName>UNK</fullName>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>TWO</fullName>
                <label>Two or more races selected</label>
            </value>
            <value>
                <fullName>NRA</fullName>
                <label>Non Resident Alien</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>