force-app/main/default/objects/Contact/fields/ucinn_ascendv2__First_and_Last_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__First_and_Last_Name_Formula__c</fullName>
    <formula>FirstName + &apos; &apos; +  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First and Last Name</label>
    <type>Text</type>
</CustomField>