force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Gender__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unkown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>