force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_All_Services_Hold__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_All_Services_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is All Services Hold</label>
    <type>Checkbox</type>
</CustomField>