force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>