force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Business_Preferred__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Business_Preferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Business Preferred</label>
    <type>Checkbox</type>
</CustomField>