force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Deceased_at_Hospital__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Deceased_at_Hospital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deceased at Hospital</label>
    <type>Checkbox</type>
</CustomField>