force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Hospital_Dev_and_Fundraising_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Hospital_Dev_and_Fundraising_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hospital Dev and Fundraising Opt Out</label>
    <type>Checkbox</type>
</CustomField>