force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Hospital_Employee__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Hospital_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hospital Employee</label>
    <type>Checkbox</type>
</CustomField>