force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Name_Overridden__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Name_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicated that the name fields have been manually overridden.</description>
    <inlineHelpText>Locks the constituent name in place.  Allows the name on the constituent record to be different than the Full Name on the Name record.</inlineHelpText>
    <label>Is Name Overridden</label>
    <type>Checkbox</type>
</CustomField>