force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Online_Payment_Update_Required__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Online_Payment_Update_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Online Payment Update Required</label>
    <type>Checkbox</type>
</CustomField>