force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_PEP_Rollout_1_1_Meeting_Completed__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_PEP_Rollout_1_1_Meeting_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PEP Rollout 1:1 Meeting Completed</label>
    <type>Checkbox</type>
</CustomField>