force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Possible_Duplicate_Checked__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Possible_Duplicate_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Possible Duplicate Checked</label>
    <type>Checkbox</type>
</CustomField>