force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Recognition_Name_Overridden__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Recognition_Name_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Locks the recognition name in place. Allows the recognition name on the constituent record to be different than the addressee on the Salutation record.</inlineHelpText>
    <label>Is Recognition Name Overridden</label>
    <type>Checkbox</type>
</CustomField>