force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Scholarship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Scholarship</label>
    <type>Checkbox</type>
</CustomField>