force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_School_Employee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_School_Employee_Formula__c</fullName>
    <description>Check box is checked if one of the Constituent type selected is either:
Staff Full-time (or) Staff Part-time (or) Faculty Full-time (or) Faculty Part-time</description>
    <formula>INCLUDES( ucinn_ascendv2__Contact_Type__c , &quot;Staff Full-time&quot;) ||
INCLUDES( ucinn_ascendv2__Contact_Type__c , &quot;Staff Part-time&quot;) ||
INCLUDES( ucinn_ascendv2__Contact_Type__c , &quot;Faculty Full-time&quot;) ||
INCLUDES( ucinn_ascendv2__Contact_Type__c , &quot;Faculty Part-time&quot;)</formula>
    <label>Is School Employee</label>
    <type>Checkbox</type>
</CustomField>