force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_School_of_Medicine_Friend__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_School_of_Medicine_Friend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the contact made a donation to School of Medicine.</description>
    <label>Is School of Medicine Friend</label>
    <type>Checkbox</type>
</CustomField>