force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Solicitable_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Solicitable_Formula__c</fullName>
    <description>Determine if the constituent can be solicited.</description>
    <formula>AND(ucinn_ascendv2__Do_Not_Solicit__c = false, OR (ucinn_ascendv2__Do_Not_Call__c = false, DoNotCall = false, ucinn_ascendv2__Do_Not_Email__c = false, ucinn_ascendv2__Do_Not_Mail__c = false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Solicitable</label>
    <type>Checkbox</type>
</CustomField>