force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Tier_1_Physician__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Tier_1_Physician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tier 1 Physician</label>
    <type>Checkbox</type>
</CustomField>