force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Trustee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Trustee_Formula__c</fullName>
    <formula>IF(
OR(
INCLUDES(ucinn_ascendv2__Contact_Type__c, &apos;Former Trustee&apos;),
INCLUDES(ucinn_ascendv2__Contact_Type__c, &apos;Honorary Trustee&apos;),
INCLUDES(ucinn_ascendv2__Contact_Type__c, &apos;Life Trustee&apos;),
INCLUDES(ucinn_ascendv2__Contact_Type__c, &apos;Trustee Spouse&apos;),
INCLUDES(ucinn_ascendv2__Contact_Type__c, &apos;Trustee Widow/er Spouse&apos;),
INCLUDES(ucinn_ascendv2__Contact_Type__c, &apos;Voting Trustee&apos;)
)
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Trustee</label>
    <type>Checkbox</type>
</CustomField>