force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Is_Trustee_With_Spouse_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Trustee_With_Spouse_Formula__c</fullName>
    <formula>IF(OR(CONTAINS(ucinn_ascendv2__Primary_Contact_Type__c, &quot;Trustee&quot;), CONTAINS(ucinn_ascendv2__Preferred_Spouse__r.ucinn_ascendv2__Primary_Contact_Type__c, &quot;Trustee&quot;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Trustee With Spouse</label>
    <type>Checkbox</type>
</CustomField>