force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Lifetime_Cash_No_Trustee_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Lifetime_Cash_No_Trustee_Formula__c</fullName>
    <formula>if(ucinn_ascendv2__Is_Trustee_Formula__c = true, null,  ucinn_ascendv2__Lifetime_Cash__c )</formula>
    <label>Lifetime Cash (No Trustee)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>