force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Linked_Patient__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Linked_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Linked Patient)</relationshipLabel>
    <relationshipName>Contacts_Linked_Patient</relationshipName>
    <type>Lookup</type>
</CustomField>