force-app/main/default/objects/Contact/fields/ucinn_ascendv2__Lost__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Lost__c</fullName>
    <description>Created for iModules data integration file</description>
    <label>Lost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>